--- a/package.json
+++ b/package.json
@@ -1,51 +1,60 @@
 {
-  "name": "edicasoft-crud-test-task",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 4000",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.2.10",
-    "@types/react-redux": "^7.1.8",
-    "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.19.2",
-    "date-fns": "^2.0.0-beta.5",
-    "formik": "^2.1.4",
-    "google-maps-react": "^2.0.6",
-    "lodash.debounce": "^4.0.8",
-    "material-ui-image": "^3.2.3",
-    "next": "9.4.0",
-    "next-redux-wrapper": "^6.0.2",
-    "nodemailer": "^6.4.10",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-loader-spinner": "^3.1.14",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0",
-    "yup": "^0.29.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/yup": "^0.29.3",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
-    "eslint-plugin-react": "^7.20.0",
-    "typescript": "^3.9.2"
-  }
+    "name": "car-rent-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 4000",
+        "build": "next build",
+        "start": "next start",
+        "lint": "prettier --write './**/*.{js,jsx,ts,tsx,css,json}' --config ./.prettierrc && eslint --fix ./"
+    },
+    "dependencies": {
+        "@date-io/date-fns": "^1.3.13",
+        "@fortawesome/fontawesome-svg-core": "^1.2.29",
+        "@fortawesome/free-solid-svg-icons": "^5.13.1",
+        "@fortawesome/react-fontawesome": "^0.1.11",
+        "@material-ui/core": "^4.10.2",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@material-ui/pickers": "^3.2.10",
+        "@types/react-redux": "^7.1.8",
+        "autosuggest-highlight": "^3.1.1",
+        "axios": "^0.21.1",
+        "date-fns": "^2.0.0-beta.5",
+        "formik": "^2.1.4",
+        "google-maps-react": "^2.0.6",
+        "lodash.debounce": "^4.0.8",
+        "material-ui-image": "^3.2.3",
+        "next": "11.0.0",
+        "next-redux-wrapper": "^7.0.2",
+        "nodemailer": "^6.4.10",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-loader-spinner": "^4.0.0",
+        "react-redux": "^7.2.0",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.3.0",
+        "styled-components": "^5.1.0",
+        "yup": "^0.32.9"
+    },
+    "devDependencies": {
+        "@types/node": "^15.12.4",
+        "@types/react": "^17.0.11",
+        "@types/yup": "^0.29.3",
+        "@typescript-eslint/eslint-plugin": "^4.23.0",
+        "@typescript-eslint/parser": "^4.23.0",
+        "eslint": "^7.26.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.23.2",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "prettier": "^2.3.0",
+        "typescript": "^4.3.4"
+    }
 }
